classDiagram
    class User {
        +int Id
        +string Email
        +string PasswordHash
        +DateTime CreatedAt
    }

    class TaskItem {
        +int Id
        +int UserId
        +string Title
        +string Description
        +PriorityLevel Priority
        +int EstimatedMinutes
        +DateTime Deadline
        +TaskStatus Status
        +DateTime CreatedAt
    }

    class TaskDependency {
        +int Id
        +int UserId
        +int TaskId
        +int DependsOnTaskId
    }

    class AnalyticsService {
        +calculateDelayRisk(userId)
        +detectPriorityConflicts(userId)
        +generateRecommendations(userId)
    }

    User "1" --> "many" TaskItem : owns
    TaskItem "1" --> "many" TaskDependency : has
    TaskDependency --> TaskItem : dependsOn
    AnalyticsService --> TaskItem : analyzes
